/metrics path in ingress rule

--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -24,5 +24,12 @@ spec:
             name: flask-app-service 
             port:
               number: 5000
+      - path: /metrics
+        pathType: ImplementationSpecific
+        backend:
+          service:
+            name: flask-app-service
+            port:
+              number: 5000
 
 
